--- a/rest/rest/src/main/resources/application.yml
+++ b/rest/rest/src/main/resources/application.yml
@@ -1,13 +1,16 @@
 spring:
-  session:
-    store-type: redis
-
   application:
-    name: order-management-service 
-    
-security:
-  user:
-    name: sarita
-    password: sarita
+     name: order-management-service
+  cloud:
+    config:
+      failFast: true
+      discovery:
+        enabled: true
+eureka:
+  instance:
+    preferIpAddress: true
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 server:
-  port: 8000
+  port: 8081
